--- a/app/webroot/css/front/style1.css
+++ b/app/webroot/css/front/style1.css
@@ -4,10 +4,10 @@
 /* slider layout */
 .lof-slidecontent { position:relative;	overflow:hidden;}
 .lof-slidecontent .preload{	height:100%;	width:100%;	position:absolute;	top:0;	left:0;	z-index:100000;	text-align:center;	background:#FFF; display:none;}
-.lof-slidecontent .preload div{	height:100%;	width:100%;	background:transparent url(../../img/front/load-indicator.gif) no-repeat scroll 50% 50%;}
+.lof-slidecontent .preload div{	height:100%;	width:100%;	background:transparent url(../images/load-indicator.gif) no-repeat scroll 50% 50%;}
 
 .lof-slidecontent  .sliders-wrapper{	position:relative;	height:100%;	width:900px;	z-index:3px;	overflow:hidden; }
-.lof-slidecontent  ul.sliders-wrap-inner{overflow:hidden;	background:transparent url(../../img/front/load-indicator.gif) no-repeat scroll 50% 50%;	padding:0px;	margin:0;	position:absolute;	overflow:hidden;}
+.lof-slidecontent  ul.sliders-wrap-inner{overflow:hidden;	background:transparent url(../images/load-indicator.gif) no-repeat scroll 50% 50%;	padding:0px;	margin:0;	position:absolute;	overflow:hidden;}
 .lof-slidecontent  ul.sliders-wrap-inner li{overflow:hidden;	padding:0px;margin:0px;	float:left;	position:relative;}
 .lof-slidecontent  .lof-opacity  li{position:absolute;	top:0;	left:0;	float:inherit; }
 
@@ -16,7 +16,7 @@
 	position:absolute;
 	bottom:0px;
 	right:0px;
-	background-image: url(../../img/front/gallery-bg.jpg);
+	background-image: url(../images/gallery-bg.jpg);
 	background-repeat: repeat-x;
 	height: 109px;
 	width: 720px;
@@ -47,7 +47,7 @@ ul.sliders-wrap-inner li img{	padding:0px;	}
 	bottom:50px;
 	left:0px;
 	width:350px;
-	background:url(../../img/front/bg_trans.png);
+	background:url(../images/bg_trans.png);
 	height:100px;
 	padding:10px;
 	color:#FFF;
@@ -92,7 +92,7 @@ ul.sliders-wrap-inner li img{	padding:0px;	}
 	text-indent:-999px;
 	margin-right:5px;
 	margin-top:35px;
-	background-image: url(../../img/front/right-page.png);
+	background-image: url(../images/right-page.png);
 	background-repeat: no-repeat;
 	background-position: right center;
 }
@@ -100,7 +100,7 @@ ul.sliders-wrap-inner li img{	padding:0px;	}
 	float:left;
 	text-indent:-999px;
 	margin-left:5px;
-	background-image: url(../../img/front/left-page.png);
+	background-image: url(../images/left-page.png);
 	background-repeat: no-repeat;
 	background-position: left center;
 	margin-top:35px;
@@ -113,13 +113,13 @@ ul.sliders-wrap-inner li img{	padding:0px;	}
     height: 20px;
     width: 20px;
 	cursor:hand; cursor:pointer;
-	background:url(../../img/front/transparent_bg.png) repeat;
+	background:url(../images/transparent_bg.png) repeat;
 }
 
 .lof-slidecontent .button-control span { display:block;  width:100%; height:100%;}
 .lof-slidecontent .action-start span  {
-	background:url(../../img/front/play.png) no-repeat center center;
+	background:url(../images/play.png) no-repeat center center;
 }
 .lof-slidecontent .action-stop span {
-	background:url(../../img/front/pause.png) no-repeat center center;
+	background:url(../images/pause.png) no-repeat center center;
 }
