--- a/app/webroot/css/front/skin.css
+++ b/app/webroot/css/front/skin.css
@@ -70,13 +70,13 @@
     width: 17px;
     height: 23px;
     cursor: pointer;
-    background: transparent url(../images/arw-right.png) no-repeat 0 0;
+    background: transparent url(../../img/front/arw-right.png) no-repeat 0 0;
 }
 
 .jcarousel-skin-tango .jcarousel-direction-rtl .jcarousel-next-horizontal {
     left: 5px;
     right: auto;
-    background-image: url(../images/../images/prev-horizontal.png);
+    background-image: url(../../img/front/../../img/front/prev-horizontal.png);
 }
 
 .jcarousel-skin-tango .jcarousel-next-horizontal:hover,
@@ -101,13 +101,13 @@
     width: 17px;
     height: 23px;
     cursor: pointer;
-    background: transparent url(../images/arw-left.png) no-repeat 0 0;
+    background: transparent url(../../img/front/arw-left.png) no-repeat 0 0;
 }
 
 .jcarousel-skin-tango .jcarousel-direction-rtl .jcarousel-prev-horizontal {
     left: auto;
     right: 5px;
-    background-image: url(../images/../images/next-horizontal.png);
+    background-image: url(../../img/front/../../img/front/next-horizontal.png);
 }
 
 .jcarousel-skin-tango .jcarousel-prev-horizontal:hover, 
@@ -135,7 +135,7 @@
     width: 32px;
     height: 32px;
     cursor: pointer;
-    background: transparent url(../images/next-vertical.png) no-repeat 0 0;
+    background: transparent url(../../img/front/next-vertical.png) no-repeat 0 0;
 }
 
 .jcarousel-skin-tango .jcarousel-next-vertical:hover,
@@ -162,7 +162,7 @@
     width: 32px;
     height: 32px;
     cursor: pointer;
-    background: transparent url(../images/prev-vertical.png) no-repeat 0 0;
+    background: transparent url(../../img/front/prev-vertical.png) no-repeat 0 0;
 }
 
 .jcarousel-skin-tango .jcarousel-prev-vertical:hover,
