Front Products & product details View

--- a/app/webroot/css/front/skin.css
+++ b/app/webroot/css/front/skin.css
@@ -76,7 +76,7 @@
 .jcarousel-skin-tango .jcarousel-direction-rtl .jcarousel-next-horizontal {
     left: 5px;
     right: auto;
-    background-image: url(../../img/front/../../img/front/prev-horizontal.png);
+    background-image: url(../../img/front/prev-horizontal.png);
 }
 
 .jcarousel-skin-tango .jcarousel-next-horizontal:hover,
