--- a/app/webroot/css/front/style.css
+++ b/app/webroot/css/front/style.css
@@ -1043,7 +1043,7 @@ div.loader {
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-image: url('loader.gif');
+	background-image: url('../../img/front/loader.gif');
 	background-repeat: no-repeat;
 	background-position: center;
 	width: 550px;
@@ -1182,7 +1182,7 @@ div.pagination span.ellipsis {
 #captionToggle a {
 	float: right;
 	display: block;
-	background-image: url('caption.png');
+	background-image: url('../../img/front/caption.png');
 	background-repeat: no-repeat;
 	background-position: right;
 	margin-top: 5px;
@@ -1199,14 +1199,15 @@ div.pagination span.ellipsis {
 	font-size: 17px;
 	font-weight: bold;
 	color: #FFF;
-	margin-top: 24px;
+	margin-top: 10px;
 	margin-left: 8px;
 }
 .album-share {
 	float: right;
-	width: 125px;
+	width: 150px;
 	margin-right: 10px;
-	margin-top: 8px;
+	margin-top: 10px;
+        font-size: 14px;
 }
 .album-share-tit {
 	font-family: Arial, Helvetica, sans-serif;
