--- a/app/webroot/css/front/style.css
+++ b/app/webroot/css/front/style.css
@@ -1728,52 +1728,11 @@ html ul.tabs2 li.active a, html ul.tabs2 li.active a {
     padding-left: 15px;
     text-transform: uppercase;
 }
-#cboxLoadedContent legend {
-    color: #222222;
-    font-family: Arial,Helvetica,sans-serif;
-    font-size: 17px;
-    text-transform: uppercase;
-}
-#cboxLoadedContent fieldset {
-    border: medium none;
-    margin: 0;
-    padding: 0;
-}
 .users .input {
     margin-bottom: 7px;
 }
 .data_form_black .input {
     margin-bottom: 7px;
-}
-#cboxLoadedContent label {
-    color: #333333;
-    float: left;
-    font-family: Arial,Helvetica,sans-serif;
-    font-size: 13px;
-    font-weight: bold;
-    height: 25px;
-    line-height: 25px;
-    margin-right: 10px;
-    text-align: right;
-    width: 140px;
-}
-#cboxLoadedContent input[type="text"], #cboxLoadedContent input[type="password"] {
-    border: 1px solid #CCCCCC;
-    color: #333333;
-    float: left;
-    font-family: Arial,Helvetica,sans-serif;
-    font-size: 13px;
-    font-weight: bold;
-    height: 25px;
-    line-height: 25px;
-    margin-bottom: 8px;
-    margin-left: 10px;
-    padding: 0 7px;
-    text-align: left;
-    width: 290px;
-}
-#cboxLoadedContent label span {
-    color: #BB0000;
 }
 .submit input {
     background-image: url("../../img/front/button.jpg");
@@ -1936,6 +1895,7 @@ div.message {
     text-align: left;
     width: 290px;
 }
+/*
 #cboxContent p {
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:18px;
@@ -1943,3 +1903,45 @@ div.message {
 	margin-left:15px;
 	height:100px;
 }
+
+#cboxLoadedContent legend {
+    color: #222222;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 17px;
+    text-transform: uppercase;
+}
+#cboxLoadedContent fieldset {
+    border: medium none;
+    margin: 0;
+    padding: 0;
+}
+#cboxLoadedContent label {
+    color: #333333;
+    float: left;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    height: 25px;
+    line-height: 25px;
+    margin-right: 10px;
+    text-align: right;
+    width: 140px;
+}
+#cboxLoadedContent input[type="text"], #cboxLoadedContent input[type="password"] {
+    border: 1px solid #CCCCCC;
+    color: #333333;
+    float: left;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    height: 25px;
+    line-height: 25px;
+    margin-bottom: 8px;
+    margin-left: 10px;
+    padding: 0 7px;
+    text-align: left;
+    width: 290px;
+}
+#cboxLoadedContent label span {
+    color: #BB0000;
+}*/
