--- a/app/webroot/css/front/style.css
+++ b/app/webroot/css/front/style.css
@@ -1895,6 +1895,9 @@ div.message {
     text-align: left;
     width: 290px;
 }
+.cbox-p{
+  padding:20px;
+}
 /*
 #cboxContent p {
 	font-family:Arial, Helvetica, sans-serif;
