--- a/app/webroot/css/front/style.css
+++ b/app/webroot/css/front/style.css
@@ -1109,7 +1109,6 @@ div.image-desc {
 
 }
 div.navigation {
-	height:400px;
 	border:solid 1px #6E6664;
 }
 ul.thumbs {
@@ -1895,9 +1894,14 @@ div.message {
     text-align: left;
     width: 290px;
 }
+
+/*SHARAF*/
 .cbox-p{
   padding:20px;
 }
+#progress_report{width: 100%; float: left; margin-top: 10px;}
+#progress_report_bar_container{width: 100%; height: 10px; font-size: 9px; text-align: right;}
+#progress_report_bar{background-color: greenyellow; width: 0; height: 100%;}
 /*
 #cboxContent p {
 	font-family:Arial, Helvetica, sans-serif;
